--- a/src/app/pages/Todo/todo.module.css
+++ b/src/app/pages/Todo/todo.module.css
@@ -7,7 +7,7 @@
 }
 
 .completedTasksButton {
-  @apply w-full py-2 px-4 bg-blue-500 text-white rounded-md hover:bg-blue-600 
+  @apply w-full py-2 px-4 bg-blue-700 text-white font-bold rounded-md hover:bg-blue-800 
          transition-colors focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2
          disabled:opacity-50 disabled:cursor-not-allowed;
 }
