--- a/src/app/pages/Login/login.module.css
+++ b/src/app/pages/Login/login.module.css
@@ -10,6 +10,11 @@
   @apply text-2xl font-bold text-center text-gray-900 dark:text-white mb-6;
 }
 
+.errorText{
+  @apply text-red-800 dark:text-red-700 text-sm;
+
+}
+
 .formGroup {
   @apply space-y-2;
 }
