--- a/src/app/pages/Todo/todo.module.css
+++ b/src/app/pages/Todo/todo.module.css
@@ -100,7 +100,8 @@
   width: 100%;
   padding: 10px;
   margin-top: 10px;
-  background-color: #ff4d4d;
+  font-weight: bolder;
+  background-color: #ee0606;
   color: white;
   border: none;
   border-radius: 4px;
